--- a/.gitignore
+++ b/.gitignore
@@ -235,5 +235,6 @@ $RECYCLE.BIN/
 
 secrets.json
 test.py
+*.zip
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,venv,windows,python,java
